changed picture and fixed overflow

--- a/style.scss
+++ b/style.scss
@@ -10,83 +10,6 @@
 }
 
 // loader LOADER
-@keyframes ldio-f3tzucmg9bb-o {
-  0% {
-    opacity: 1;
-    transform: translate(0 0);
-  }
-  49.99% {
-    opacity: 1;
-    transform: translate(38.72px, 0);
-  }
-  50% {
-    opacity: 0;
-    transform: translate(38.72px, 0);
-  }
-  100% {
-    opacity: 0;
-    transform: translate(0, 0);
-  }
-}
-@keyframes ldio-f3tzucmg9bb {
-  0% {
-    transform: translate(0, 0);
-  }
-  50% {
-    transform: translate(38.72px, 0);
-  }
-  100% {
-    transform: translate(0, 0);
-  }
-}
-.ldio-f3tzucmg9bb div {
-  z-index: 100000;
-  position: absolute;
-  width: 27.72px;
-  height: 27.72px;
-  border-radius: 50%;
-  // top: 30%;
-  // left: 40%;
-}
-.ldio-f3tzucmg9bb div:nth-child(1) {
-  background: #e90c59;
-  animation: ldio-f3tzucmg9bb 1s linear infinite;
-  animation-delay: -0.5s;
-}
-.ldio-f3tzucmg9bb div:nth-child(2) {
-  background: #46dff0;
-  animation: ldio-f3tzucmg9bb 1s linear infinite;
-  animation-delay: 0s;
-}
-.ldio-f3tzucmg9bb div:nth-child(3) {
-  background: #e90c59;
-  animation: ldio-f3tzucmg9bb-o 1s linear infinite;
-  animation-delay: -0.5s;
-}
-.loadingio-spinner-dual-ball-f4bxwls9top {
-  z-index: 1000;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  // display: inline-block;
-  overflow: hidden;
-  background: rgb(208, 208, 208);
-}
-.ldio-f3tzucmg9bb {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  position: relative;
-  transform: translateZ(0) scale(1);
-  backface-visibility: hidden;
-  transform-origin: 0 0; /* see note above */
-}
-.ldio-f3tzucmg9bb div {
-  box-sizing: content-box;
-}
-/* generated by https://loading.io/ */
 
 // end of loader
 
@@ -293,6 +216,12 @@ body {
 }
 // end of nav bar
 
+// intersection observer
+.itemss.show {
+  animation: bottom_to_top 2s ease-in forwards;
+  opacity: 1;
+}
+
 // services SERVICES
 .services {
   display: flex;
@@ -315,15 +244,11 @@ body {
     align-items: center;
     width: 100%;
   }
-  .services-item-content.show {
-    animation: bottom_to_top 1s ease-in;
-    opacity: 1;
-  }
+
   .services-item-content {
     display: flex;
     justify-content: center;
     width: 100%;
-    opacity: 0;
 
     &:nth-child(2) {
       .services-item:nth-child(2) {
@@ -346,6 +271,7 @@ body {
     }
   }
   .services-item {
+    opacity: 0;
     cursor: default;
     box-shadow: -4px -4px 10px var(--background2),
       4px 4px 20px var(--background2);
@@ -452,6 +378,7 @@ body {
     width: 100%;
     // margin: 0 0 20px 0;
     .projects-item-content {
+      opacity: 0;
       display: flex;
       flex-direction: column;
       justify-content: center;
